# continuos_integration

./: README.md
continuous_integration-main/: CMakeLists.txt
continuous_integration-main/.github/workflows/: build.yml
continuous_integration-main/app/: CMakeLists.txt
continuous_integration-main/src/: CMakeLists.txt  functions.h
continuous_integration-main/tests/: CMakeLists.txt
continuous_integration-main/workflows/: build.yml
